# pol-eto-zoloto

./: .env.dev  .gitignore  README.md  docker-compose.yml
video-consume-service/: .env  Dockerfile  pyproject.toml
video-consume-service/src/: __main__.py
video-consume-service/src/video_consume_service/: create_app.py
video-consume-service/src/video_consume_service/api/v1/stream/: core.py  views.py
video-consume-service/src/video_consume_service/templates/: index.html
video-produce-service/: Dockerfile  pyproject.toml
video-produce-service/src/: __main__.py
video-produce-service/src/video_produce_service/: create_app.py  settings.py
video-produce-service/src/video_produce_service/api/v1/videos/: core.py  models.py  views.py
