[tool.poetry]
name = "video-consume-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
opencv-python = "^4.6.0"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
loguru = "^0.6.0"
imutils = "^0.5.4"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
rope = "^1.3.0"
bandit = "^1.7.4"
isort = "^5.10.1"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
