[tool.poetry]
name = "video-produce-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
rope = "^1.3.0"
bandit = "^1.7.4"
isort = "^5.10.1"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
